texi2html/test/invalid/res/texi_macro_def_not_closed/macro_def_not_closed.passfirst
macro_def_not_closed.texi(,2) 
macro_def_not_closed.texi(,3) @node Top
macro_def_not_closed.texi(,4) 
macro_def_not_closed.texi(,5) texte
macro_def_not_closed.texi(,6) 
macro_def_not_closed.texi(,7) @macro the_macro {arg1, arg2}
macro_def_not_closed.texi(,8) 
macro_def_not_closed.texi(,9) Macro body
macro_def_not_closed.texi(,10) 
macro_def_not_closed.texi( end of file,11) @end macro
